<resources>
    <string name="app_name">Meal Monkey</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_your_email_to_receive_a_link_to_create_a_new_password_via_email">Please enter your email to receive a link to create a new password via email</string>
    <string name="we_have_sent_an_otp_to_your_mobile">We have sent an OTP to your Mobile</string>
    <string name="please_check_your_email_id_abc__gmail_comcontinue_to_reset_your_password">Please check your Email Id abc*******@gmail.com continue to reset your password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create An Account</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="fast_food_delivery_to_your_home_office_wherever_you_are">Fast food delivery to your home, office wherever you are</string>
    <string name="find_food_you_love">Find Food You Love</string>
    <string name="discover_the_best_foods_from_over_1_000_restaurants_and_fast_delivery_to_your_doorstep">Discover the best foods from over 1,000 restaurants and fast delivery to your doorstep</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="real_time_tracking_of_your_food_on_the_app_once_you_placed_the_order">Real time tracking of your food on the app once you placed the order</string>
    <string name="add_your_details_to_login">Add your details to login</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or_login_with">or Login With</string>
    <string name="log_in_with_facebook">Log in With Facebook</string>
    <string name="log_in_with_google">Log in With Google</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="didn_t_receive">Didn\'t Receive?</string>
    <string name="click_here">Click Here</string>
    <string name="add_your_details_to_sign_up">Add your details to Sign Up</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="name">Name</string>
    <string name="menu">Menu</string>
    <string name="offers">Offers</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="search_food">Search Food</string>
    <string name="popular_restaurants">Popular Restaurants</string>
    <string name="view_all">View all</string>
    <string name="minute_by_tuk_tuk">Minute by tuk tuk</string>
    <string name="caf_de_noir">Café de Noir</string>
    <string name="bakes_by_tella">Bakes by Tella</string>
    <string name="recent_items">Recent Items</string>
    <string name="indian">Indian</string>
    <string name="sri_lankan">Sri Lankan</string>
    <string name="italian">Italian</string>
    <string name="caf_de_bambaa">Café De Bambaa</string>
    <string name="burger_by_bella">Burger by Bella</string>
    <string name="good_morning_akila">Good morning Akila!</string>
    <string name="caf_western_food">Café Western Food</string>
    <string name="_4_9">4.9</string>
    <string name="_124_ratings">(124 Ratings)</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="find_discounts_offers_special_meals_and_more">Find discounts, Offers special meals and more!</string>
    <string name="check_offers">Check Offers</string>
    <string name="desserts">Desserts</string>
    <string name="_4_star_rating">4 Star Rating</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_ornare_leo_non_mollis_id_cursus_eu_euismod_faucibus_in_leo_malesuada">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ornare leo non mollis id cursus. Eu euismod faucibus in leo malesuada</string>
    <string name="total_price">Total Price</string>
    <string name="lkr_1500">LKR 1500</string>
    <string name="description">Description</string>
    <string name="rs_750">Rs. 750</string>
    <string name="tandoori_pizza">Tandoori Pizza</string>
    <string name="customize_your_order">Customize your Order</string>
    <string name="select_size_of_portion">Select Size of Portion</string>
    <string name="select_the_ingredients">Select the Ingredients</string>
    <string name="number_of_portions">Number of portions</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="image">image</string>
    <string name="lkr_price">LKR: %s</string>
    <string name="per_portion">/ per Portion</string>
    <string name="payment_details">Payment Details</string>
    <string name="my_orders">My Orders</string>
    <string name="notification">Notification</string>
    <string name="inbox">Inbox</string>
    <string name="about_us">About Us</string>
    <string name="add_credit_debit_card">Add Credit/Debit Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry">Expiry</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="you_can_remove_this_card_at_anytime">You can remove this card at anytime</string>
    <string name="add_card">Add Card</string>
    <string name="security_code">Security Code</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="notifications">Notifications</string>
    <string name="your_orders_has_been_picked_up">Your orders has been picked up</string>
    <string name="now">Now</string>
    <string name="enter_email">Enter Email</string>
    <string name="about_us_para1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="mealmonkey_promotions">MealMonkey Promotions</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>

    <string name="_6th_july">6th July</string>
    <string name="my_order">My Order</string>
    <string name="king_burgers">King Burgers</string>
    <string name="burger">Burger</string>
    <string name="western_food">Western Food</string>
    <string name="no_03_4th_lane_new_york">No 03, 4th Lane, New York</string>
    <string name="veg_burger">Veg Burger</string>
    <string name="veg_pizza">Veg Pizza</string>
    <string name="cheese_burger">Cheese Burger</string>
    <string name="fries">Veg Fries</string>
    <string name="coffee">Coffee</string>
    <string name="x">x</string>
    <string name="_16">$16</string>
    <string name="_14">$14</string>
    <string name="_17">$17</string>
    <string name="_15">$15</string>
    <string name="_6">$6</string>
    <string name="delivery_instrusctions">Delivery Instrusctions</string>
    <string name="add_notes">Add Notes</string>
    <string name="sub_total">Sub Total</string>
    <string name="_68">$ 68</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="_2">$ 2</string>
    <string name="total">Total</string>
    <string name="_70">$ 70</string>
    <string name="checkout">Checkout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="hi_there_user">Hi There User</string>
    <string name="sign_out">Sign Out</string>
    <string name="save">Save</string>
    <string name="delivering_to">Delivering to</string>
    <string name="current_location">Current Location</string>
    <string name="most_popular">Most Popular</string>
    <string name="_124_ratings_caf">(124 ratings) Café</string>
    <string name="caf">Café</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="_653_nostrand_ave_brooklyn_ny_11216">653 Nostrand Ave.,\nBrooklyn, NY 11216</string>
    <string name="change">Change</string>
    <string name="payment_method">Payment Method</string>
    <string name="discount">Discount</string>
    <string name="_4">-$ 4</string>
    <string name="_66">$ 66</string>
    <string name="send_order">Send Order</string>
    <string name="_1">1</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="__2187">**** **** **** 2187</string>
    <string name="card_star">**** **** **** </string>
    <string name="john_doe_mail">johndoe@email.com</string>
    <string name="thank_you_for_your_order">Thank You! \nfor your order</string>
    <string name="your_order_is_now_being_processed_we_will_let_you_know_once_the_order_is_picked_from_the_outlet_check_the_status_of_your_order">Your Order is now being processed. We will let you know once the order is picked from the outlet. Check the status of your Order</string>
    <string name="track_my_order">Track My Order</string>
    <string name="back_to_home">Back To Home</string>
    <string name="add_another_credit_debit_card">Add Another Credit/Debit Card</string>
    <string name="customize_your_payment_method">Customize your payment method</string>
    <string name="delete_card">Delete Card</string>
    <string name="__">****</string>
    <string name="mulberry_pizza_by_josh">Mulberry Pizza by Josh</string>
    <string name="pizza_rush_hour">Pizza Rush Hour</string>
    <string name="barita">Barita</string>
    <string name="caf_de_noires">Café de Noires</string>
    <string name="cafe_beans">Cafe Beans</string>
    <string name="countryfood">countryFood</string>
    <string name="addcarddetailsdata">AddCardDetailsData</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="enter_valid_password">Enter Valid Password</string>
    <string name="error_occurred_during_google_signin">Error Occurred During Google SignIn</string>
    <string name="card_details_database">card_details_database</string>
    <string name="profile_database">profile_database</string>
    <string name="token_not_received">Token not received</string>
    <string name="invalid_card_number">Invalid Card Number</string>
    <string name="invalid_month">Invalid Month</string>
    <string name="invalid_year">Invalid Year</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="addcardbottomsheetfragment">AddCardBottomSheetFragment</string>
    <string name="size1">Size1</string>
    <string name="size2">Size2</string>
    <string name="size3">Size3</string>
    <string name="size4">Size4</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number</string>
    <string name="enter_address">Enter Address</string>
    <string name="orderdetails">OrderDetails</string>
    <string name="pagetitle">PageTitle</string>
    <string name="try_again">Try Again</string>

</resources>