<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/my_order_cardview_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/davide_cantelli_jpkfc5_d_di_unsplash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/king_burgers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/king_burgers"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/my_order_cardview_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:drawablePadding="8dp"
        android:text="@string/_4_9"
        android:textColor="@color/orange"
        app:layout_constraintStart_toEndOf="@+id/my_order_cardview_image"
        app:layout_constraintTop_toBottomOf="@+id/king_burgers"
        app:drawableStartCompat="@drawable/star_1" />

    <TextView
        android:id="@+id/rating_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/_124_ratings"
        app:layout_constraintBottom_toBottomOf="@+id/rating"
        app:layout_constraintStart_toEndOf="@+id/rating"
        app:layout_constraintTop_toTopOf="@+id/rating" />

    <TextView
        android:id="@+id/burger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/burger"
        app:layout_constraintStart_toStartOf="@+id/rating"
        app:layout_constraintTop_toBottomOf="@+id/rating" />

    <ImageView
        android:id="@+id/orange_dot"
        android:layout_width="5dp"
        android:layout_height="5dp"
        android:layout_marginEnd="3dp"
        android:src="@drawable/orange_dot"
        app:layout_constraintBottom_toBottomOf="@+id/western_food"
        app:layout_constraintEnd_toStartOf="@+id/western_food"
        app:layout_constraintTop_toBottomOf="@+id/rating_count" />

    <TextView
        android:id="@+id/western_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/western_food"
        app:layout_constraintBottom_toBottomOf="@+id/burger"
        app:layout_constraintStart_toStartOf="@+id/rating_count"
        app:layout_constraintTop_toTopOf="@+id/burger" />

    <TextView
        android:id="@+id/no_03_4th_lane_new_york"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:text="@string/no_03_4th_lane_new_york"
        app:drawableStartCompat="@drawable/path_10235"
        app:layout_constraintStart_toStartOf="@+id/burger"
        app:layout_constraintTop_toBottomOf="@+id/western_food" />

</androidx.constraintlayout.widget.ConstraintLayout>